# django-siruta

./: .bumpversion.cfg  .cookiecutterrc  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: github-actions.yml
ci/templates/.github/workflows/: github-actions.yml
data/: siruta_an_2024.csv
data/anaf/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  5.json  51.json  52.json  6.json  7.json  (+2 more)
docs/: conf.py
docs/reference/: siruta.forms.rst
src/siruta/: __main__.py  anaf.py  cli.py  data.py  forms.py  import_anaf.py  import_csv.py
src/siruta/static/siruta/: counties.js
tests/: test_cli.py  test_forms.py
